--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <!--==================== ABOUT ====================-->
             <section class="about section container" id="about">
                 <div class="about__container grid">
-                    <img src="/blob/main/image/ask.png" alt="" class="about__img">
+                    <img src="../image/ask.png" alt="" class="about__img">
 
                     <div class="about__data">
                         <h2 class="section__title about__title">
@@ -146,7 +146,7 @@
                     <div class="steps__container grid">
                         <div class="steps__card">
                             <div class="steps__card-number">01</div>
-                             <img src="C:\Users\pc\Desktop\notepad\pt 3\others\image/n.png" alt="" width="200px" height="200px">
+                             <img src="../image/n.PNG" alt="" width="200px" height="200px">
                             <h3 class="steps__card-title">Exercise</h3>
                             <p class="steps__card-description">
                                 Ensure your pet gets regular physical activity to stay healthy and happy.
@@ -155,7 +155,7 @@
 
                         <div class="steps__card">
                             <div class="steps__card-number">02</div>
-                             <img src="C:\Users\pc\Desktop\notepad\pt 3\others\image/nn.png" alt="" width="200px" height="200px">
+                             <img src="../image/nn.PNG" alt="" width="200px" height="200px">
                             <h3 class="steps__card-title">Nutrition</h3>
                             <p class="steps__card-description">
                                 Ensure your pet gets regular physical activity to stay healthy and happy.
@@ -164,7 +164,7 @@
 
                         <div class="steps__card">
                             <div class="steps__card-number">03</div>
-                             <img src="C:\Users\pc\Desktop\notepad\pt 3\others\image/nnn.png" alt="" width="200px" height="200px">
+                             <img src="../image/nnn.PNG" alt="" width="200px" height="200px">
                             <h3 class="steps__card-title">Veterinary Care</h3>
                             <p class="steps__card-description">
                                 Schedule routine check-ups and vaccinations to maintain your pet's health and catch any issues early.
@@ -189,7 +189,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="C:\Users\pc\Desktop\notepad\pt 3\others\image/1.png" alt="" class="product__img">
+                        <img src="../image/1.PNG" alt="" class="product__img">
 
                         <h3 class="product__title">Pet bed 1</h3>
                         <span class="product__price">$19.99</span>
@@ -202,7 +202,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="C:\Users\pc\Desktop\notepad\pt 3\others\image/2.png" alt="" class="product__img">
+                        <img src="../image/2.PNG" alt="" class="product__img">
 
                         <h3 class="product__title">Pet bed 2</h3>
                         <span class="product__price">$19.99</span>
@@ -215,7 +215,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="C:\Users\pc\Desktop\notepad\pt 3\others\image/3.png" alt="" class="product__img">
+                        <img src="../image/3.PNG" alt="" class="product__img">
 
                         <h3 class="product__title">Pet bowl</h3>
                         <span class="product__price">$7.99</span>
@@ -228,7 +228,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="C:\Users\pc\Desktop\notepad\pt 3\others\image/4.png" alt="" class="product__img">
+                        <img src="../image/4.PNG" alt="" class="product__img">
 
                         <h3 class="product__title">Pet Collar</h3>
                         <span class="product__price">$5.99</span>
@@ -241,7 +241,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="C:\Users\pc\Desktop\notepad\pt 3\others\image/5.png" alt="" class="product__img">
+                        <img src="..image/5.PNG" alt="" class="product__img">
 
                         <h3 class="product__title">Pet toy (bone)</h3>
                         <span class="product__price">$10.99</span>
@@ -254,7 +254,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="C:\Users\pc\Desktop\notepad\pt 3\others\image/6.png" alt="" class="product__img">
+                        <img src="../image/6.PNG" alt="" class="product__img">
 
                         <h3 class="product__title"></h3>Pet toy (2) </h3>
                         <span class="product__price">$8.99</span>
@@ -480,7 +480,7 @@
   </div>
   <div class="login-content">
    
-    <img src="C:\Users\pc\Desktop\notepad\pt 3\others\image/id.png">
+    <img src="../image/id.PNG">
     <h2 class="title">Sign Up</h2>
              <div class="input-div one">
                 <div class="i">
