--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <!--==================== HOME ====================-->
             <section class="home" id="home">
                 <div class="home__container container grid">
-                    <img src="../image/home.png" alt="" class="home__img">
+                    <img src="./image/home.png" alt="" class="home__img">
 
                     <div class="home__data">
                         <h1 class="home__title">
@@ -99,7 +99,7 @@
             <!--==================== ABOUT ====================-->
             <section class="about section container" id="about">
                 <div class="about__container grid">
-                    <img src="../image/ask.PNG" alt="" class="about__img">
+                    <img src="./image/ask.PNG" alt="" class="about__img">
 
                     <div class="about__data">
                         <h2 class="section__title about__title">
@@ -146,7 +146,7 @@
                     <div class="steps__container grid">
                         <div class="steps__card">
                             <div class="steps__card-number">01</div>
-                             <img src="../image/n.png" alt="" width="200px" height="200px">
+                             <img src="./image/n.png" alt="" width="200px" height="200px">
                             <h3 class="steps__card-title">Exercise</h3>
                             <p class="steps__card-description">
                                 Ensure your pet gets regular physical activity to stay healthy and happy.
