--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="/image/1.PNG" alt="" class="product__img">
+                        <img src="/blob/main/image/1.png" alt="" class="product__img">
 
                         <h3 class="product__title">Pet bed 1</h3>
                         <span class="product__price">$19.99</span>
