--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="./image/2.PNG" alt="" class="product__img">
+                        <img src="/blob/main/image/2.png" alt="" class="product__img">
 
                         <h3 class="product__title">Pet bed 2</h3>
                         <span class="product__price">$19.99</span>
@@ -215,7 +215,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="/image/3.png" alt="" class="product__img">
+                        <img src="/blob/main/image/3.png" alt="" class="product__img">
 
                         <h3 class="product__title">Pet bowl</h3>
                         <span class="product__price">$7.99</span>
