--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <!--==================== ABOUT ====================-->
             <section class="about section container" id="about">
                 <div class="about__container grid">
-                    <img src="/blob/main/image/ask.png" alt="" class="about__img">
+                    <img src="https://raw.githubusercontent.com/athenapay/petplanetss/main/ask.png" alt="" class="about__img">
 
                     <div class="about__data">
                         <h2 class="section__title about__title">
